# netmito/src/api/mod.rs
@@ -58,8 +58,8 @@ pub fn router(st: InfraPool, cancel_token: CancellationToken) -> Router {
                 )),
             )
             .route(
-                "/logout-all",
-                post(users::logout_all).layer(middleware::from_fn_with_state(
+                "/revoke",
+                post(users::revoke).layer(middleware::from_fn_with_state(
                     st.clone(),
                     user_auth_middleware,
                 )),
@@ -103,8 +103,8 @@ pub fn router(st: InfraPool, cancel_token: CancellationToken) -> Router {
                 )),
             )
             .route(
-                "/logout-all",
-                post(users::logout_all).layer(middleware::from_fn_with_state(
+                "/revoke",
+                post(users::revoke).layer(middleware::from_fn_with_state(
                     st.clone(),
                     user_auth_middleware,
                 )),
